--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ main .main-buttons button:hover {
     box-shadow: 0 1px 6px rgba(0,0,0,0.1);
     color: #000000;
 }
-/*Danod estilos al footer*/
+/*Dando estilos al footer usando grid*/
 footer {
     width: 100%;
     height: 60px;
@@ -139,6 +139,7 @@ footer {
     background-color: #f2f2f2;
     border-top: 1px solid #e4e4e4;
 }
+/*arreglando la posicion de los textos del footer*/
 footer ul {
     margin: 10px;
     list-style: none;
